# tiny-boss

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  tiny-boss-architecture.html
.github/workflows/: lint.yml  publish.yml
tests/: test_core.py  test_protocol.py
tiny_boss/: __init__.py  cli.py  clients.py  protocol.py  proxy.py
