[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "tiny-boss"
version = "0.1.0"
description = "Cheap LLM worker + smart LLM supervisor. Cost-saving protocol for AI agents."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0.0",
    "google-generativeai>=0.8.0",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
tiny-boss = "tiny_boss.cli:main"

[tool.setuptools.packages.find]
include = ["tiny_boss*"]
